[XQLuaViewDemo] Luaview 第二阶段学习，扩展的 demo 功能：
    1、添加本地下载服务器脚本Zip包，并且解压，运行；
    2、实现脚本下载脚本并运行脚本的功能。

Signed-off-by: laixuefei <laixuefei@g7.com.cn>

--- a/XQLuaViewDemo/Controllers/XQLuaViewController.xib
+++ b/XQLuaViewDemo/Controllers/XQLuaViewController.xib
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,7 +20,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xqbanner" translatesAutoresizingMaskIntoConstraints="NO" id="Wgj-qc-50x">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="Wgj-qc-50x">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="190"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="190" id="sY3-bM-Qrg"/>
@@ -37,6 +38,6 @@
         </view>
     </objects>
     <resources>
-        <image name="xqbanner" width="1280" height="720"/>
+        <image name="icon" width="57" height="57"/>
     </resources>
 </document>
