--- a/XQLuaViewDemo/Base.lproj/Main.storyboard
+++ b/XQLuaViewDemo/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,8 +12,7 @@
         <!--View Controller-->
         <scene sceneID="F7o-Hg-aRL">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3vv-2P-DWH" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="I5j-sM-G7c" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="I5j-sM-G7c" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="omk-iy-q3b"/>
                         <viewControllerLayoutGuide type="bottom" id="fDs-KZ-G07"/>
@@ -23,6 +23,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3vv-2P-DWH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="125.59999999999999" y="-33.733133433283363"/>
         </scene>
